# ollama-rust

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  build_log.txt  check_output.txt  check_output_v2.txt  check_output_v3.txt  docker-compose.yml  docker-entrypoint.sh  start.sh  test_build_errors.txt  test_errors.txt  warnings.txt
src/: assets.rs  discover.rs  downloader.rs  gguf.rs  lib.rs  main.rs  middleware.rs  models.rs  openai.rs  rng.rs  server_state.rs  tools.rs  tui.rs  wasm.rs
src/api/: mod.rs  ollama.rs  openai.rs  types.rs
src/app/: mod.rs
src/app/commands/: mod.rs
src/app/events/: mod.rs
src/app/runner/: mod.rs
src/app/server/: mod.rs
src/cmd/: mod.rs
src/convert/: mod.rs  safetensors.rs  tensor.rs  tokenizer.rs  torch.rs
src/core/: mod.rs
src/core/cache/: mod.rs  traits.rs
src/core/model/: architectures.rs  config.rs  factory.rs  mod.rs  registry.rs  traits.rs
src/core/tensor/: mod.rs  ops.rs
src/core/tokenizer/: bpe.rs  mod.rs  sentencepiece.rs  traits.rs  wordpiece.rs
src/envconfig/: mod.rs
src/format/: mod.rs
src/fs/: mod.rs
src/ggml/: backend.rs  context.rs  mod.rs  tensor.rs
src/harmony/: mod.rs
src/infra/: mod.rs
src/infra/converter/: mod.rs  safetensors.rs
src/infra/ggml/: backend.rs  context.rs  mod.rs  tensor.rs
src/infra/gguf/: mod.rs
src/infra/storage/: mod.rs
src/kvcache/: mod.rs
src/parser/: modelfile.rs
src/progress/: mod.rs
src/readline/: mod.rs
src/runner/: mod.rs
src/sample/: mod.rs
src/server/: mod.rs
src/template/: mod.rs
src/thinking/: mod.rs
src/tokenizer/: bpe.rs  mod.rs  sentencepiece.rs  wordpiece.rs
src/utils/: mod.rs
tests/: integration_tests.rs
(+2 files in other folders)
